--- a/src/styles/layout/_travel.scss
+++ b/src/styles/layout/_travel.scss
@@ -2,11 +2,11 @@
 @use '../abstracts/variables/' as *;
 
 .travel {
-    padding-top: 8rem;
+    padding-top: 7rem;
     @include flex($flex-direction: column, $gap: 3.2rem);
 
     @include tablet {
-        padding-top: 13rem;
+        padding-top: 13.4rem;
     }
     @include desktop {
         padding-top: 0rem;
@@ -19,19 +19,19 @@
     &__content {
         padding-top: 0;
         text-align: center;
-        @include flex($flex-direction: column, $gap: 3.2rem);
+        @include flex($flex-direction: column, $gap: 3.6rem);
         @include tablet {
             padding-top: 2.5rem;
         }
         @include desktop {
-            padding-top: 18rem;
+            padding-top: 14rem;
             max-width: 45rem;
             text-align: left;
         }
     }
 
     &__headings-wrapper {
-        @include flex($flex-direction: column, $gap: 2rem);
+        @include flex($flex-direction: column, $gap: 1.6rem);
         @include desktop {
             align-items: baseline;
         }
@@ -51,21 +51,13 @@
         }
         .card {
             &__heading {
-                font-size: 3.5rem;
-                display: -webkit-box;
-                -webkit-box-orient: vertical;
-                -webkit-line-clamp: 3;
-                overflow: hidden;
-                line-clamp: 3;
+                font-size: $font-size-2xl;
+                @include line-clamp(3);
                 font-weight: 700;
             }
             &__sub-heading {
                 font-size: $font-size-md;
-                display: -webkit-box;
-                -webkit-box-orient: vertical;
-                -webkit-line-clamp: 2;
-                overflow: hidden;
-                line-clamp: 2;
+                @include line-clamp(2);
             }
         }
     }
