AR_RU_05 : Travel : Worked on Reviews

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -18,7 +18,6 @@
             $gap: 3.2rem
         );
         padding: 3.2rem;
-        width: 100%;
         flex-basis: 100%;
         align-self: stretch;
         min-height: 27.9rem;
@@ -27,26 +26,25 @@
             padding: 6.4rem;
             gap: 6.4rem;
             max-width: 28.8rem;
-            max-height: 44.3rem;
+            min-height: 44.3rem;
         }
         @include desktop {
             padding: 6.4rem;
             gap: 6.4rem;
-            min-width: 38.6rem;
+            max-width: 38.6rem;
             min-height: 44.3rem;
         }
     }
 
     &--sm {
-        white-space: nowrap;
         @include flex(
             $flex-direction: column,
-            $justify-content: start,
             $flex-wrap: nowrap,
+            $justify-content: space-between,
             $gap: 1.6rem
         );
         min-height: 15.1rem;
-        padding: 3.2rem;
+        padding: 3.2rem 0;
         width: 100%;
         flex-basis: 100%;
         align-self: stretch;
