--- a/src/styles/layout/_services.scss
+++ b/src/styles/layout/_services.scss
@@ -18,7 +18,7 @@
     @include desktop {
         flex-direction: row;
         text-align: left;
-        padding-top: 14rem;
+        padding-top: 12.7rem;
         justify-content: space-between;
     }
     &__content {
@@ -59,7 +59,7 @@
         @include desktop {
             width: fit-content;
             flex-direction: row;
-            flex-wrap: nowrap;
+            // flex-wrap: nowrap;
         }
     }
 }
