--- a/src/styles/layout/_travel.scss
+++ b/src/styles/layout/_travel.scss
@@ -6,24 +6,24 @@
     @include flex($flex-direction: column, $gap: 3.2rem);
 
     @include tablet {
-        padding-top: 13.4rem;
+        padding-top: 12.9rem;
     }
     @include desktop {
-        padding-top: 0rem;
+        padding-top: 0.5rem;
         flex-direction: row;
         gap: 0;
-        flex-wrap: nowrap;
         justify-content: space-between;
     }
 
     &__content {
         padding-top: 0;
         text-align: center;
-        @include flex($flex-direction: column, $gap: 3.6rem);
+        @include flex($flex-direction: column, $gap: 3.2rem);
         @include tablet {
             padding-top: 2.5rem;
         }
         @include desktop {
+            gap: 3.6rem;
             padding-top: 14rem;
             max-width: 45rem;
             text-align: left;
@@ -34,26 +34,27 @@
         @include flex($flex-direction: column, $gap: 1.6rem);
         @include desktop {
             align-items: baseline;
+            gap: 1.2rem;
         }
     }
 
     &__cards-container {
         position: relative;
         width: 100%;
-        @include flex($gap: 1.6rem, $flex-direction: column);
+        @include flex($gap: 1.6rem, $flex-direction: column, $flex-wrap: wrap);
         @include tablet {
             padding-top: 3rem;
             gap: 3.2rem;
         }
         @include desktop {
-            padding-top: 3rem;
+            padding-top: 2.5rem;
             gap: 3.2rem;
         }
         .card {
             &__heading {
                 font-size: $font-size-2xl;
                 @include line-clamp(3);
-                font-weight: 700;
+                font-weight: $font-weight-700;
             }
             &__sub-heading {
                 font-size: $font-size-md;
@@ -65,7 +66,7 @@
     &__cards-group1,
     &__cards-group2 {
         width: 100%;
-        @include flex($flex-direction: column, $gap: 1.6rem);
+        @include flex($flex-direction: column, $gap: 1.6rem, $flex-wrap: wrap);
         @include tablet {
             flex-direction: row;
         }
@@ -79,7 +80,7 @@
         height: 12rem;
         width: 12rem;
         position: absolute;
-        top: -5rem;
+        top: -3rem;
         right: -5rem;
         z-index: 2;
         display: none;
