--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -64,7 +64,7 @@
         @include flex(
             $flex-direction: column,
             $align-items: baseline,
-            $gap: 3.2rem
+            $gap: 3.5rem
         );
         text-align: left;
         padding: 3.2rem;
@@ -86,7 +86,7 @@
         white-space: nowrap;
         @include flex(
             $flex-direction: column,
-            $justify-content: start,
+            $justify-content: space-between,
             $flex-wrap: nowrap,
             $gap: 1.6rem
         );
