--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -21,7 +21,8 @@
         flex-basis: 100%;
         align-self: stretch;
         min-height: 27.9rem;
-
+        flex: 1;
+        flex-basis: 40%;
         @include tablet {
             padding: 6.4rem;
             gap: 6.4rem;
