--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -160,7 +160,10 @@
     gap: 3rem;
     &__img {
         height: 2rem;
-        width: fit-content;
+
+        img {
+            object-fit: contain;
+        }
     }
     @include tablet {
         margin: auto;
@@ -171,7 +174,10 @@
         gap: 3rem;
         &__img {
             height: 3rem;
-            width: fit-content;
+            max-width: fit-content;
+            img {
+                object-fit: contain;
+            }
         }
     }
     @include desktop {
@@ -179,9 +185,12 @@
         width: 100%;
         @include flex($justify-content: space-around);
         flex-wrap: wrap;
-        img {
+        height: fit-content;
+        &__img {
             height: 3.2rem;
-            width: fit-content;
+            img {
+                object-fit: contain;
+            }
         }
     }
 }
