--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -3,15 +3,14 @@
     border-radius: 3.2rem;
     border: $grey-border;
     transition: 0.5s;
+    text-align: center;
+    line-height: normal;
 
     &:hover {
         box-shadow: $box-shadow-hover-effect;
     }
 
     &--lg {
-        text-align: center;
-        line-height: normal;
-
         @include flex(
             $flex-direction: column,
             $justify-content: start,
@@ -19,22 +18,44 @@
             $gap: 3.2rem
         );
         padding: 3.2rem;
-        width: 100%;
         flex-basis: 100%;
         align-self: stretch;
         min-height: 27.9rem;
-
+        flex: 1;
+        flex-basis: 40%;
         @include tablet {
             padding: 6.4rem;
             gap: 6.4rem;
             max-width: 28.8rem;
-            max-height: 44.3rem;
+            min-height: 44.3rem;
         }
         @include desktop {
             padding: 6.4rem;
             gap: 6.4rem;
-            min-width: 38.6rem;
+            max-width: 38.6rem;
             min-height: 44.3rem;
+        }
+    }
+
+    &--sm {
+        @include flex(
+            $flex-direction: column,
+            $flex-wrap: nowrap,
+            $justify-content: space-between,
+            $gap: 1.6rem
+        );
+        min-height: 15.1rem;
+        padding: 3.2rem 0;
+        width: 100%;
+        flex-basis: 100%;
+        align-self: stretch;
+        @include tablet {
+            width: fit-content;
+            max-width: 40rem;
+        }
+        @include desktop {
+            width: fit-content;
+            max-width: 20.9rem;
         }
     }
 }
