--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -64,7 +64,7 @@
         max-height: 29rem;
         @include flex(
             $flex-direction: column,
-            $align-items: baseline,
+            $align-items: flex start,
             $gap: 3.5rem
         );
         text-align: left;
@@ -81,15 +81,5 @@
             max-height: 16.4rem;
             align-items: center;
         }
-    }
-
-    &__content-center {
-        white-space: nowrap;
-        @include flex(
-            $flex-direction: column,
-            $justify-content: space-between,
-            $flex-wrap: nowrap,
-            $gap: 1.6rem
-        );
     }
 }
