--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -58,4 +58,28 @@
             max-width: 20.9rem;
         }
     }
+
+    &--horizontal {
+        width: 100%;
+        max-height: 29rem;
+        @include flex(
+            $flex-direction: column,
+            $align-items: flex start,
+            $gap: 3.5rem
+        );
+        text-align: left;
+        padding: 3.2rem;
+
+        @include tablet {
+            flex-direction: row;
+            justify-content: start;
+            align-items: center;
+        }
+        @include desktop {
+            flex-direction: row;
+            justify-content: start;
+            max-height: 16.4rem;
+            align-items: center;
+        }
+    }
 }
