--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,7 +6,8 @@
     cursor: pointer;
     transition: 0.4s;
     &:focus-visible {
-        outline: 2px solid $midnight-express-50;
+        outline: 2px solid $outrageous-orange;
+        outline-style: dashed;
     }
 
     &--primary {
