--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -13,5 +13,8 @@
     @include desktop {
         padding-left: 9.8rem;
         padding-right: 9.8rem;
+
+        max-width: 1900px;
+        margin: auto;
     }
 }
