AR_RU_10 : Improvements : Improves media queries and added Fixed container widths

--- a/src/styles/abstracts/mixins/_responsiveness.scss
+++ b/src/styles/abstracts/mixins/_responsiveness.scss
@@ -5,7 +5,7 @@
     Contains a media query for screens greater than breakpoint for mobile and less than that of desktop 
 */
 @mixin tablet {
-    @media (width <= map-get($breakpoints, tablet)) and (width > map-get($breakpoints, mobile)) {
+    @media (width > map-get($breakpoints, mobile)) {
         @content;
     }
 }
@@ -15,7 +15,7 @@
     Contains a media query for screens greater than breakpoint for tablet 
 */
 @mixin desktop {
-    @media (width > map-get($breakpoints, tablet)) {
+    @media (width >= map-get($breakpoints, tablet)) {
         @content;
     }
 }
