--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -32,6 +32,9 @@
 
         @include desktop {
             order: 1;
+            position: relative;
+            left: 0;
+            transform: none;
         }
     }
 
@@ -57,13 +60,7 @@
             order: 3;
             display: block;
             flex-direction: row;
-            flex-wrap: nowrap;
             position: relative;
-        }
-
-        @include desktop {
-            flex-direction: row;
-            order: 3;
         }
     }
 
@@ -110,21 +107,9 @@
             order: 3;
         }
         @include desktop {
-            background-color: inherit;
-            padding: 0;
-            opacity: 1;
-            transition: none;
-            transform: none;
-            width: 70%;
-            white-space: nowrap;
-            position: relative;
-            box-shadow: none;
-            @include flex(space-between);
-            border-radius: 0;
-            top: auto;
-            left: auto;
-            right: auto;
             order: 2;
+            width: 69%;
+            max-width: 70%;
         }
 
         .nav-links__container {
@@ -151,8 +136,17 @@
                 }
             }
             @include desktop {
-                background-color: inherit;
                 @include flex($gap: 6.4rem);
+                position: relative;
+                width: fit-content;
+                top: auto;
+                box-shadow: none;
+                height: fit-content;
+                padding: 0;
+                transform: none;
+                opacity: 1;
+                right: auto;
+                background-color: inherit;
             }
         }
 
