--- a/src/styles/abstracts/variables/_colors.scss
+++ b/src/styles/abstracts/variables/_colors.scss
@@ -7,6 +7,8 @@ $white: #ffffff;
 $black: #000000;
 $midnight-express-50: #19182580;
 $grey-100: #eeeeee;
+$dark-grey: #191825bf;
+$custard-yellow: #facd4914;
 
 // Borders
 $grey-border: 1px solid $grey-100;
