--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -67,7 +67,7 @@
     }
     &__desc {
         font-size: $font-size-sm;
-        font-weight: 400;
+        font-weight: $font-weight-400;
         line-height: 2.7rem;
         @include tablet {
             font-size: $font-size-lg;
@@ -122,16 +122,14 @@
     }
 
     &__column {
-        margin-top: 0;
-
-        @include flex(space-between, left, column, 2.8rem, nowrap);
+        @include flex(start, flex-start, column, 2.8rem, nowrap);
 
         &-heading {
             font-size: $font-size-lg;
         }
     }
     &__list {
-        @include flex(start, left, column, 3.2rem, nowrap);
+        @include flex(start, baseline, column, 3.2rem, nowrap);
         &-item {
             font-size: $font-size-md;
             color: $dark-grey;
