--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -36,7 +36,7 @@
         }
     }
     &__socials {
-        @include flex($gap: 3.2rem);
+        @include flex($gap: 3.2rem, $flex-wrap: wrap);
     }
     &__socials-container {
         height: 3.2rem;
@@ -69,6 +69,7 @@
         font-size: $font-size-sm;
         font-weight: $font-weight-400;
         line-height: 2.7rem;
+        @include line-clamp(5);
         @include tablet {
             font-size: $font-size-lg;
             line-height: 3.4rem;
@@ -108,7 +109,7 @@
 
     &__tablet {
         width: 100%;
-        @include flex(start, flex-start, row, 3.2rem, nowrap);
+        @include flex(start, flex-start, row, 3.2rem, wrap);
         display: none;
         @include tablet {
             display: flex;
