--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,7 +6,8 @@
     cursor: pointer;
     transition: 0.4s;
     &:focus-visible {
-        outline: 2px solid $midnight-express-50;
+        outline: 2px solid $french-rose;
+        outline-offset: 2px;
     }
 
     &--primary {
@@ -19,7 +20,6 @@
         border: $grey-border;
     }
 }
-
 .button:hover {
     box-shadow: $box-shadow-hover-effect;
 }
