AR_RU_10 : Worked on pixel perfection

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -5,13 +5,13 @@
     padding-top: 7.3rem;
 
     @include tablet {
-        @include flex(start, flex-start, column, 6.4rem, nowrap);
-        padding-top: 7.3rem;
+        @include flex(start, flex-start, column, 6.4rem);
+        padding-top: 6.5rem;
     }
 
     @include desktop {
-        padding-top: 19.1rem;
-        @include flex(space-between, flex-start, row, 6rem, nowrap);
+        padding-top: 19.7rem;
+        @include flex(start, flex-start, row, 9rem);
     }
     &__logo {
         font-size: $font-size-3xl;
@@ -105,12 +105,10 @@
         @include flex(start, flex-start, row, 3.2rem, wrap);
         display: none;
         @include tablet {
-            display: flex;
-            justify-content: space-between;
+            @include flex(start, flex-start, $gap: 14.4rem);
         }
         @include desktop {
-            max-width: 56.4rem;
-            justify-content: start;
+            gap: 3.5rem;
         }
     }
 
