--- a/src/styles/layout/_newsletter.scss
+++ b/src/styles/layout/_newsletter.scss
@@ -5,7 +5,7 @@
     text-align: center;
 
     @include tablet {
-        padding-top: 3rem;
+        padding-top: 2rem;
         margin-top: 8rem;
     }
     @include desktop {
@@ -18,7 +18,7 @@
         }
     }
     &__headings-wrapper {
-        @include flex($flex-direction: column, $gap: 2.5rem);
+        @include flex($flex-direction: column, $gap: 3rem);
         @include desktop {
             padding: 0 11rem;
         }
@@ -49,7 +49,7 @@
         @include flex($justify-content: start, $gap: 1.6rem);
         width: 100%;
         border-radius: 1.6rem;
-        padding: 2.4rem 3.2rem;
+        padding: 0.4rem 3.2rem;
         transition: 0.4s;
         background-color: $white;
         flex-wrap: nowrap;
@@ -57,11 +57,15 @@
             flex-basis: 60%;
             flex-shrink: 0;
             flex-grow: 1;
+            padding: 1.15rem 3.2rem;
         }
         @include desktop {
             width: 75%;
         }
         input {
+            outline: none;
+            padding: 2rem;
+            border-radius: inherit;
             font-size: $font-size-xs;
             width: 100%;
             height: 100%;
@@ -80,7 +84,6 @@
     }
     &__input:focus-within {
         box-shadow: $box-shadow-hover-effect;
-        border: $grey-border;
     }
     &__mail-icon {
         font-size: $font-size-md;
@@ -100,9 +103,7 @@
         @include tablet {
             font-size: $font-size-lg;
             width: fit-content;
-        }
-        @include desktop {
-            padding: 3.2rem 6.4rem;
+            padding: 2.8rem 6.4rem;
         }
     }
 }
