--- a/src/styles/layout/_newsletter.scss
+++ b/src/styles/layout/_newsletter.scss
@@ -48,7 +48,7 @@
         }
         @include desktop {
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: center;
             flex-wrap: wrap;
             align-items: center;
         }
