--- a/src/styles/layout/_testimonial.scss
+++ b/src/styles/layout/_testimonial.scss
@@ -120,6 +120,10 @@
                 height: 10rem;
             }
         }
+        &:hover {
+            background-color: $white;
+            color: $black;
+        }
     }
 
     &__pagination {
