--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -55,19 +55,6 @@
         }
     }
 
-    &__auth {
-        font-size: $font-size-xs;
-        @include flex($flex-direction: column, $gap: 1rem);
-
-        @include tablet {
-            visibility: visible;
-            order: 3;
-            display: block;
-            flex-direction: row;
-            position: relative;
-        }
-    }
-
     .nav-links {
         visibility: hidden;
         z-index: map-get($map: $z-index, $key: nav-links);
@@ -88,7 +75,6 @@
         background-color: white;
         a {
             font-size: $font-size-sm;
-            color: inherit;
             transition: 0.5s;
             &:hover {
                 color: $black;
@@ -164,6 +150,18 @@
             visibility: visible;
         }
     }
+    &__auth {
+        font-size: $font-size-xs;
+        @include flex($flex-direction: column, $gap: 1rem);
+
+        @include tablet {
+            visibility: visible;
+            order: 3;
+            display: flex;
+            flex-direction: row;
+            position: relative;
+        }
+    }
 
     &__signup:hover {
         background-color: $french-rose;
@@ -172,4 +170,7 @@
     &__login:hover {
         color: $slate-blue;
     }
+}
+.nav-link--active {
+    color: $black;
 }
