--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -56,6 +56,7 @@
     }
 
     &__explore-button {
+        box-shadow: $box-shadow-hover-effect;
         font-size: $font-size-xs;
         @include flex($gap: 0.5rem);
         i {
