--- a/src/styles/layout/_newsletter.scss
+++ b/src/styles/layout/_newsletter.scss
@@ -39,7 +39,7 @@
         @include flex($flex-direction: column, $gap: 3.2rem);
         @include tablet {
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: center;
             flex-wrap: wrap;
             align-items: center;
         }
